--- a/testdata/raven.yaml
+++ b/testdata/raven.yaml
@@ -24,3 +24,7 @@ queries:
     types: [meeting]
     traits: [due]
     description: "All meetings with due dates"
+
+  important:
+    tags: [important]
+    description: "Items tagged #important"
