--- a/testdata/raven.yaml
+++ b/testdata/raven.yaml
@@ -1,4 +1,5 @@
-daily_directory: daily
+directories:
+    daily: daily/
 queries:
     active-projects:
         query: object:project .status==active
