Fix baseline lint issues and harden CI test shell

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
 
       - name: Run tests
+        shell: bash
         run: go test -race -coverprofile=coverage.out ./...
 
       - name: Upload coverage
