Simplify relative date keywords to instant anchors
- keep only today/tomorrow/yesterday as built-in relative date keywords
- remove range/week-based keyword handling and week-start config plumbing
- centralize operator-aware date comparisons for query predicates
- update CLI/docs/examples and default saved queries to match simplified semantics
- add integration coverage for rvn update <trait_id> tomorrow on date traits

--- a/internal/config/defaults/raven.yaml
+++ b/internal/config/defaults/raven.yaml
@@ -42,13 +42,13 @@ queries:
 
   # Overdue items
   overdue:
-    query: "trait:due .value==past"
-    description: "Items past their due date"
+    query: "trait:due .value<today"
+    description: "Items due before today"
 
-  # Items due this week
-  this-week:
-    query: "trait:due .value==this-week"
-    description: "Items due this week"
+  # Items due soon
+  due-soon:
+    query: "trait:due in(.value, [today, tomorrow])"
+    description: "Items due today or tomorrow"
 
   # Active projects
   active-projects:
